syntax = "proto3";

package authorization;

option go_package = ".;pb";

import "process.proto";
import "reprocessPendingAuthorization.proto";

service AuthorizationService {
  rpc Process(AuthorizationProcessRequest) returns (AuthorizationProcessResponse);
  rpc ReprocessPendingAuthorization(AuthorizationReprocessPendingRequest) returns (AuthorizationReprocessPendingResponse);
}
